--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <th>Player</th>
                   <th>Matches</th>
                   <th>Score</th>
-                  <th>Average</th>
+                  <th>Points</th>
                 </tr>
               </thead>
               <tbody>
