Regroup the teams

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class='span6 d3graph'></div>
       <% } %>
       <div class='span6'>
-        <h4><%= league.name %></h4>
+        <h4>&ldquo;<%= league.name %>&rdquo;</h4>
         <ul class='nav nav-pills'>
           <li><a href='#standings<%= index %>'>Standings</a></li>
           <li><a href='#results<%= index %>'>Results</a></li>
