Subhas/Akshay | League Day 1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <th>#</th>
                   <th>Player</th>
                   <th>Matches</th>
-                  <th>Score</th>
+                  <th>Won</th>
                   <th>Points</th>
                 </tr>
               </thead>
