--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <div class="masthead">
         <h3 class="muted">PING PONG LEAGUE</h3>
+        <p><small>(Try hovering over player names)</small></p>
       </div>
       <hr />
     </div>
