--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <div class="container">
       <div class="masthead">
         <h3 class="muted">PING PONG LEAGUE</h3>
-        <p><small>(Try hovering over player names)</small></p>
       </div>
       <hr />
+      <div class="alert alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>TIP:</strong> Try hovering over player names in the tables and graphs
+      </div>
     </div>
   </div>
 
